fix bug on safari where show all results button was not visible behind the browser chrome, moved some modal specific styles out of serch filter css to modal css

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -39,18 +39,6 @@ body.modal-open {
   z-index: 10; /* this should be more than enough... */
 }
 
-@media (max-width: 1000px) {
-  .a11y-modal {
-    width: 65%;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .a11y-modal {
-    width: 90%;
-  }
-}
-
 .aria-modal-document {
   padding: 20px 40px 20px 20px;
 }
@@ -127,4 +115,34 @@ body.modal-open {
 
 .aria-modal-content {
   margin-bottom: 20px;
+}
+
+.aria-modal-content::-webkit-scrollbar {
+  width: 8px;
+  border: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e6e6e6;
+  border-radius: 5px;
+  transition: all 0.5s;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #808080;
+  transition: all 0.5s;
+}
+
+@media (max-width: 1200px) {
+  .a11y-modal {
+    width: 65%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .a11y-modal {
+    width: calc(100VW - 90px);
+  }
+  .aria-modal-document {
+    height: calc(100VH - 90px);
+  }
 }
